# TicketToRideSaoPaulo

./: .gitignore  README.md  balancing.ipynb  locations.txt  pyproject.toml
.ipynb_checkpoints/: graph_viz-checkpoint.ipynb
Resources/: planeje_mapadesaopaulo.png:Zone.Identifier  ttrny_conections.csv
