[tool.poetry]
name = "tickettoridesaopaulo"
version = "0.1.0"
description = ""
authors = ["scaroni <renato.scaroni@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.3.4"
jupyterlab = "^3.2.0"
python-igraph = "^0.9.7"
pycairo = "^1.20.1"
networkx = "^2.6.3"
matplotlib = "^3.4.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
